# notes_ai

./: .gitignore  Cargo.toml  README.md
src/: agent.rs  db.rs  main.rs  settings.rs
ui/: app-window.slint  classes-page.slint  settings-page.slint  types.slint
