[package]
name = "notes_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
slint = { version = "1.14.1", features = ["renderer-winit-skia"] }
ollama-rs = "0.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version="1.50.0", features=["full"] }
chrono = "0.4.44"
sqlite-vec = "0.1.9"


[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true
